--- a/alpha/flaskr/static/css/page-discussion.css
+++ b/alpha/flaskr/static/css/page-discussion.css
@@ -304,16 +304,10 @@ body.dark .chat-message{
 
 
   .centered-blocks {
-    position: absolute;
-    top: 75px;
-    left: 0;
-    right: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
     gap: 10px;
-    padding-bottom: 80px;
   }
   
   .block {
@@ -326,12 +320,12 @@ body.dark .chat-message{
   
   .block.message {
     background-color: #aaaaaab4;
-    margin-right: auto; /* pour aligner à gauche */
+    margin-right: 750px; /* pour aligner à gauche */
   }
   
   .block.response {
+    background-color: blue;
     margin-left: auto; /* pour aligner à droite */
-    background-image: linear-gradient(#4086e2, #0038d3fd);
   }
   
   .block span {
