--- a/alpha/flaskr/static/css/page-discussion.css
+++ b/alpha/flaskr/static/css/page-discussion.css
@@ -308,10 +308,10 @@ body.dark .chat-message{
     flex-direction: column;
     align-items: center;
     gap: 10px;
-  }
+    justify-content: flex-start; /* nouvelle propriété */
+}
   
   .block {
-    background-color: #f0f0f0;
     padding: 10px;
     border-radius: 20px;
     max-width: 40%; /* largeur maximale du block */
