prise en charge de l'erreur serveur 500 et ajout de l'image avec

--- a/alpha/flaskr/templates/500.html
+++ b/alpha/flaskr/templates/500.html
@@ -14,7 +14,7 @@
         </center>
     </div>
     <center>
-        <img src="{{ url_for('static', filename='img/erreurs404.png') }}" alt="erreur 404 image">
+        <img src="{{ url_for('static', filename='img/erreur500.png') }}" alt="erreur 404 image">
     </center>
 </body>
 </html>
