--- a/alpha/flaskr/templates/chat.html
+++ b/alpha/flaskr/templates/chat.html
@@ -30,7 +30,7 @@
         <div class="dialog-header">
             <div class="logo">
                 <img src="../static/img/coin_E-esprit.png" alt="Logo">
-                <span class="dots">80 (coins)</span>
+                <!-- <span class="dots">80 (coins)</span> -->
             </div>
             <h2>Shop Principal</h2>
             <span class="close" onclick="document.getElementById('my-dialog').close()">&times;</span>
@@ -38,34 +38,187 @@
         <div class="dialog-content">
             <!-- Contenu du dialogue -->
             <div class="blocks-container">
-                <!-- Blocs -->
-                <div class="block">Bloc 1</div>
-                <div class="block">Bloc 2</div>
-                <div class="block">Bloc 3</div>
-                <div class="block">Bloc 4</div>
-                <div class="block">Bloc 5</div>
-                <div class="block">Bloc 6</div>
-                <div class="block">Bloc 7</div>
-                <div class="block">Bloc 8</div>
-                <div class="block">Bloc 9</div>
-                <div class="block">Bloc 10</div>
-                <div class="block">Bloc 11</div>
-                <div class="block">Bloc 12</div>
-                <div class="block">Bloc 13</div>
-                <div class="block">Bloc 14</div>
-                <div class="block">Bloc 15</div>
-                <div class="block">Bloc 16</div>
-                <div class="block">Bloc 17</div>
-                <div class="block">Bloc 18</div>
-                <div class="block">Bloc 19</div>
-                <div class="block">Bloc 20</div>
+                <button class="block" data-dialog-id="Mérite">
+                    <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
+                    <span class="text">Mérite</span><br>
+                    <span class="price">100</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
+                  </button>
+                  
+                  <button class="block" data-dialog-id="badge1">
+                    <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
+                    <span class="text">Badge de niveau</span><br>
+                    <span class="price">1</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
+                  </button>
+                
+                  <button class="block" data-dialog-id="Bibliothèque">
+                    <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
+                    <span class="text">Bibliothèque Badge</span><br>
+                    <span class="price">10</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
+                </button>
+                
+                <button class="block" data-dialog-id="badge2">
+                    <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
+                    <span class="text">Badge de niveau</span><br>
+                    <span class="price">10</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
+                </button>
+                
+                <button class="block" data-dialog-id="badge">
+                    <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
+                    <span class="text">Badge aléatoire</span><br>
+                    <span class="price">150</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
+                </button>
+                
+                <button class="block" data-dialog-id="badge3">
+                    <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
+                    <span class="text">Badge de niveau</span><br>
+                    <span class="price">50</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
+                </button>
+                
+                <button class="block" data-dialog-id="Apparence">
+                    <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
+                    <span class="text">Apparence aléatoire</span><br>
+                    <span class="price">100</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
+                </button>
+                
+                <button class="block" data-dialog-id="badge4">
+                    <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
+                    <span class="text">Badge de niveau</span><br>
+                    <span class="price">100</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
+                </button>
+                
+                <button class="block" data-dialog-id="Rien">
+                    <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
+                    <span class="text">Rien?</span><br>
+                    <span class="price">500</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
+                </button>
+                
+                <button class="block" data-dialog-id="badge5">
+                    <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
+                    <span class="text">Badge de niveau</span><br>
+                    <span class="price">500</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
+                </button>
+                
+                <button class="block" data-dialog-id="Animation">
+                    <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
+                    <span class="text">Animation de Badge</span><br>
+                    <span class="price">100</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
+                </button>
+                
+                <button class="block" data-dialog-id="badge6">
+                    <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
+                    <span class="text">Badge de niveau</span><br>
+                    <span class="price">1000</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
+                </button>
+                
+                <button class="block" data-dialog-id="Thème2">
+                    <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
+                    <span class="text">Thème v2 2 semaine</span><br>
+                    <span class="price">500</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
+                </button>
+
+                
+                <button class="block" data-dialog-id="badge7">
+                    <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
+                    <span class="text">Badge de niveau</span><br>
+                    <span class="price">2500</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
+                </button>
+                
+                <button class="block" data-dialog-id="Thème4">
+                    <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
+                    <span class="text">Thème v2 4 semaine</span><br>
+                    <span class="price">950</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
+                </button>
+                
+                <button class="block" data-dialog-id="badge8">
+                    <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
+                    <span class="text">Badge de niveau</span><br>
+                    <span class="price">5000</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
+                </button>
+                
+                <button class="block" data-dialog-id="vidéo">
+                    <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
+                    <span class="text">Vidéo pp</span><br>
+                    <span class="price">800</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
+                </button>
+                
+                <button class="block" data-dialog-id="badge9">
+                    <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
+                    <span class="text">Badge de niveau</span><br>
+                    <span class="price">10000</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
+                </button>
+                
+                <button class="block" data-dialog-id="incognito">
+                    <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
+                    <span class="text">Mode incognito 12h</span><br>
+                    <span class="price">500</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
+                </button>
+                
+                <button class="block" data-dialog-id="badge10">
+                    <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
+                    <span class="text">Badge de niveau</span><br>
+                    <span class="price">25000</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
+                </button>
+                
+                <button class="block" data-dialog-id="Troll">
+                    <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
+                    <span class="text">Troll!!</span><br>
+                    <span class="price">500</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
+                </button>
+                
+                <button class="block" data-dialog-id="badge10">
+                    <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
+                    <span class="text">Badge de niveau</span><br>
+                    <span class="price">50000</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
+                </button>
+                
+                <button class="block" data-dialog-id="Premium1">
+                    <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
+                    <span class="text">Premium 2 semaine</span><br>
+                    <span class="price">2000</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
+                </button>
+                
+                <button class="block" data-dialog-id="badge12">
+                    <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
+                    <span class="text">Badge de niveau</span><br>
+                    <span class="price">100000</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
+                
+                </button>
+                
+                <button class="block" data-dialog-id="Premium2">
+                    <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
+                    <span class="text">Premium 2 mois</span><br>
+                    <span class="price">250000</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
+                </button>
             </div>
         </div>
     </dialog>
 
 
-
-
+    <dialog id="badge1"></dialog>
+    <dialog id="badge2"></dialog>
+    <dialog id="badge3"></dialog>
+    <dialog id="badge4"></dialog>
+    <dialog id="badge5"></dialog>
+    <dialog id="badge6"></dialog>
+    <dialog id="badge7"></dialog>
+    <dialog id="badge8"></dialog>
+    <dialog id="badge9"></dialog>
+    <dialog id="badge10"></dialog>
+    <dialog id="badge10"></dialog>
+    <dialog id="badge12"></dialog>
+    <dialog id="Bibliothèque"></dialog>
+    <dialog id="Apparence"></dialog>
+    <dialog id="Animation"></dialog>
+    <dialog id="Rien"></dialog>
+    <dialog id="Thème2"></dialog>
+    <dialog id="Thème4"></dialog>
+    <dialog id="incognito"></dialog>
+    <dialog id="vidéo"></dialog>
+    <dialog id="Premium1"></dialog>
+    <dialog id="Premium2"></dialog>
+    <dialog id="Troll"></dialog>
+    <dialog id="badge"></dialog>
+    <dialog id="Mérite"></dialog>
 
 
 
@@ -124,6 +277,19 @@
         closeButton.addEventListener('click', () => {
             dialog.close();
         });
+
+        // Récupère tous les boutons
+const buttons = document.querySelectorAll('.block[data-dialog-id]');
+
+// Ajoute un événement click à chaque bouton
+buttons.forEach((button) => {
+  button.addEventListener('click', () => {
+    const dialogId = button.getAttribute('data-dialog-id');
+    const dialog = document.getElementById(dialogId.trim());
+    dialog.showModal();
+  });
+});
+
     </script>
 
 </body>
