--- a/alpha/flaskr/templates/chat.html
+++ b/alpha/flaskr/templates/chat.html
@@ -38,153 +38,153 @@
         <div class="dialog-content">
             <!-- Contenu du dialogue -->
             <div class="blocks-container">
-                <button class="block" data-dialog-id="Mérite">
+                <button class="block" id="button-Mérite">
                     <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
                     <span class="text">Mérite</span><br>
                     <span class="price">100</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
                   </button>
                   
-                  <button class="block" data-dialog-id="badge1">
+                  <button class="block" id="button-badge1">
                     <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
                     <span class="text">Badge de niveau</span><br>
                     <span class="price">1</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
                   </button>
                 
-                  <button class="block" data-dialog-id="Bibliothèque">
+                  <button class="block" id="button-Bibliothèque">
                     <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
                     <span class="text">Bibliothèque Badge</span><br>
                     <span class="price">10</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
                 </button>
                 
-                <button class="block" data-dialog-id="badge2">
+                <button class="block" id="button-badge2">
                     <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
                     <span class="text">Badge de niveau</span><br>
                     <span class="price">10</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
                 </button>
                 
-                <button class="block" data-dialog-id="badge">
+                <button class="block" id="button-badge">
                     <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
                     <span class="text">Badge aléatoire</span><br>
                     <span class="price">150</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
                 </button>
                 
-                <button class="block" data-dialog-id="badge3">
+                <button class="block" id="button-badge3">
                     <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
                     <span class="text">Badge de niveau</span><br>
                     <span class="price">50</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
                 </button>
                 
-                <button class="block" data-dialog-id="Apparence">
+                <button class="block" id="button-Apparence">
                     <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
                     <span class="text">Apparence aléatoire</span><br>
                     <span class="price">100</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
                 </button>
                 
-                <button class="block" data-dialog-id="badge4">
+                <button class="block" id="button-badge4">
                     <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
                     <span class="text">Badge de niveau</span><br>
                     <span class="price">100</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
                 </button>
                 
-                <button class="block" data-dialog-id="Rien">
+                <button class="block" id="button-Rien">
                     <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
                     <span class="text">Rien?</span><br>
                     <span class="price">500</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
                 </button>
                 
-                <button class="block" data-dialog-id="badge5">
+                <button class="block" id="button-badge5">
                     <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
                     <span class="text">Badge de niveau</span><br>
                     <span class="price">500</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
                 </button>
                 
-                <button class="block" data-dialog-id="Animation">
+                <button class="block" id="button-Animation">
                     <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
                     <span class="text">Animation de Badge</span><br>
                     <span class="price">100</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
                 </button>
                 
-                <button class="block" data-dialog-id="badge6">
+                <button class="block" id="button-badge6">
                     <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
                     <span class="text">Badge de niveau</span><br>
                     <span class="price">1000</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
                 </button>
                 
-                <button class="block" data-dialog-id="Thème2">
+                <button class="block" id="button-Thème2">
                     <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
                     <span class="text">Thème v2 2 semaine</span><br>
                     <span class="price">500</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
                 </button>
 
                 
-                <button class="block" data-dialog-id="badge7">
+                <button class="block" id="button-badge7">
                     <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
                     <span class="text">Badge de niveau</span><br>
                     <span class="price">2500</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
                 </button>
                 
-                <button class="block" data-dialog-id="Thème4">
+                <button class="block" id="button-Thème4">
                     <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
                     <span class="text">Thème v2 4 semaine</span><br>
                     <span class="price">950</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
                 </button>
                 
-                <button class="block" data-dialog-id="badge8">
+                <button class="block" id="button-badge8">
                     <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
                     <span class="text">Badge de niveau</span><br>
                     <span class="price">5000</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
                 </button>
                 
-                <button class="block" data-dialog-id="vidéo">
+                <button class="block" id="button-vidéo">
                     <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
                     <span class="text">Vidéo pp</span><br>
                     <span class="price">800</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
                 </button>
                 
-                <button class="block" data-dialog-id="badge9">
+                <button class="block" id="button-badge9">
                     <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
                     <span class="text">Badge de niveau</span><br>
                     <span class="price">10000</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
                 </button>
                 
-                <button class="block" data-dialog-id="incognito">
+                <button class="block" id="button-incognito">
                     <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
                     <span class="text">Mode incognito 12h</span><br>
                     <span class="price">500</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
                 </button>
                 
-                <button class="block" data-dialog-id="badge10">
+                <button class="block" id="button-badge10">
                     <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
                     <span class="text">Badge de niveau</span><br>
                     <span class="price">25000</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
                 </button>
                 
-                <button class="block" data-dialog-id="Troll">
+                <button class="block" id="button-Troll">
                     <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
                     <span class="text">Troll!!</span><br>
                     <span class="price">500</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
                 </button>
                 
-                <button class="block" data-dialog-id="badge10">
+                <button class="block" id="button-badge10">
                     <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
                     <span class="text">Badge de niveau</span><br>
                     <span class="price">50000</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
                 </button>
                 
-                <button class="block" data-dialog-id="Premium1">
+                <button class="block" id="button-Premium1">
                     <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
                     <span class="text">Premium 2 semaine</span><br>
                     <span class="price">2000</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
                 </button>
                 
-                <button class="block" data-dialog-id="badge12">
+                <button class="block" id="button-badge12">
                     <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
                     <span class="text">Badge de niveau</span><br>
                     <span class="price">100000</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
                 
                 </button>
                 
-                <button class="block" data-dialog-id="Premium2">
+                <button class="block" id="button-Premium2">
                     <span class="logoahat"><img src="../static/img/coin_E-esprit.png" alt="logoshop">
                     <span class="text">Premium 2 mois</span><br>
                     <span class="price">250000</span><span class="price-icon"><img src="../static/img/coin_E-esprit.png" alt="Coin E-esprit">
@@ -194,31 +194,6 @@
     </dialog>
 
 
-    <dialog id="badge1"></dialog>
-    <dialog id="badge2"></dialog>
-    <dialog id="badge3"></dialog>
-    <dialog id="badge4"></dialog>
-    <dialog id="badge5"></dialog>
-    <dialog id="badge6"></dialog>
-    <dialog id="badge7"></dialog>
-    <dialog id="badge8"></dialog>
-    <dialog id="badge9"></dialog>
-    <dialog id="badge10"></dialog>
-    <dialog id="badge10"></dialog>
-    <dialog id="badge12"></dialog>
-    <dialog id="Bibliothèque"></dialog>
-    <dialog id="Apparence"></dialog>
-    <dialog id="Animation"></dialog>
-    <dialog id="Rien"></dialog>
-    <dialog id="Thème2"></dialog>
-    <dialog id="Thème4"></dialog>
-    <dialog id="incognito"></dialog>
-    <dialog id="vidéo"></dialog>
-    <dialog id="Premium1"></dialog>
-    <dialog id="Premium2"></dialog>
-    <dialog id="Troll"></dialog>
-    <dialog id="badge"></dialog>
-    <dialog id="Mérite"></dialog>
 
 
 
@@ -278,17 +253,17 @@
             dialog.close();
         });
 
-        // Récupère tous les boutons
-const buttons = document.querySelectorAll('.block[data-dialog-id]');
-
-// Ajoute un événement click à chaque bouton
-buttons.forEach((button) => {
-  button.addEventListener('click', () => {
-    const dialogId = button.getAttribute('data-dialog-id');
-    const dialog = document.getElementById(dialogId.trim());
-    dialog.showModal();
-  });
-});
+        const badge1 = document.getElementById('badge1');
+        const openButtonbadge1 = document.getElementById('button-badge1');
+        // const closeButton = document.getElementById('close-dialog-button');
+        
+        openButton.addEventListener('click', () => {
+            dialog.showModal();
+        });
+        
+        // closeButton.addEventListener('click', () => {
+        //     dialog.close();
+        // });
 
     </script>
 
